# fandom-gui-scraper

./: .coveragerc  .dockerignore  .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  README.md  docker-compose.yml  environment.yml  jest.config.js  main.py  package-lock.json  package.json  project_roadmap.md  pyproject.toml  pytest.ini  requirements-backend.txt  requirements.txt  scrapy.cfg  setup_conda_environment.sh  setup_project_structure.py  test.ipynb  test_gui_complete.py  建置布置與相關指令.md
.github/workflows/: tests.yml
api/: __init__.py  main.py
api/endpoints/: __init__.py  auth.py  characters.py  scraper.py  ws.py
api/jobs/: __init__.py  cleanup.py  events.py  fs.py  listener.py  models.py  queue.py  store.py  tasks.py  worker.py
api/middleware/: __init__.py  rate_limit.py
api/plugins/: __init__.py  base.py  example_plugin.py
api/schemas/: __init__.py  character.py
api/security/: __init__.py  auth.py  dependencies.py  jwt.py
api/websocket/: __init__.py  manager.py
cli/: __init__.py  main.py
config/: default_config.yaml  universal_scraper.yaml
config/selector_configs/: default_selectors.json  generic_fandom.yaml  onepiece.yaml
demo-app/: index.html  package.json
demo-app/src/: main.js
docker/: Dockerfile  portfolio.Dockerfile  portfolio.nginx.conf
docs/: API_DOCUMENTATION.md  API_TEST_FIXES.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  FRONTEND_TEST_IMPLEMENTATION.md  INSTALLATION.md  SPIDER_TEST_FIXES.md  TESTING.md  TEST_IMPLEMENTATION_SUMMARY.md  USER_GUIDE.md
docs/guided-demo/: guided-demo-desktop.webm  guided-demo-mobile.webm
docs/visual-smoke/: visual_smoke_report.json
examples/: spider_usage_examples.py
frontend/: index.html  package.json
frontend/css/: components.css  layout.css  main.css  variables.css
frontend/js/: app.js  router.js
gui/: __init__.py  main_window.py
gui/controllers/: __init__.py  scraper_controller.py
gui/dialogs/: database_viewer.py  preference_dialog.py  settings_dialog.py  wiki_database_viewer.py
gui/widgets/: __init__.py  anime_selector.py  chart_widget.py  data_viewer_widget.py  log_viewer.py  media_gallery.py  progress_dialog.py  scraper_config_widget.py  search_widget.py  tag_manager.py
models/: __init__.py  document.py  episode_model.py  gallery_model.py  storage.py
models/repositories/: __init__.py  character_repo.py
models/schemas/: __init__.py  anime_schema.py  character_schema.py
portfolio-web/: index.html  styles.css
scraper/: __init__.py  base_spider.py  dragonball_spider.py  fandom_spider.py  middlewares.py  naruto_spider.py  onepiece_spider.py  pipelines.py  runner.py  settings.py  universal_fandom_spider.py
scraper/items/: __init__.py  anime_item.py  character_item.py  episode_item.py  media_item.py
scraper/mediawiki/: __init__.py  campaign.py  client.py  errors.py  harvest.py  harvester.py  infobox.py  query.py  repository.py  target.py
scraper/spiders/: __init__.py
scraper/utils/: __init__.py  anti_ban.py  request_builder.py  response_parser.py  url_manager.py
scripts/: capture_guided_demo.py  capture_web_screenshots.py  create_demo_wiki_job.py  docker_smoke_test.py  prototype_starwars.py  run_multi_wiki_campaign.py
tests/: conftest.py  test_models.py
tests/frontend/: README.md  setup.js
tests/integration/: __init__.py  test_api_integration.py  test_cli_integration.py  test_starwars.py  test_universal_api.py  test_wiki_db_api.py
utils/: __init__.py  backup.py  brave_search.py  config_manager.py  file_manager.py  logger.py  network_utils.py  normalizer.py  selectors.py  thread_manager.py
(+96 files in other folders)
